--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -49,11 +49,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<li><a  href="{% url 'cadastro' %}"  >Cadastro</a></li>
 
 					</ul>
-					<div class="cart box_1">
-						<a href="checkout.html">
+					<div class="">
+						<a href="{% url 'produtos' %}">
 						<h3> <div class="total">
-							<span class="simpleCart_total"></span> (<span id="simpleCart_quantity" class="simpleCart_quantity"></span> items)</div>
-							<img src="{% static 'images/cart.png' %}" alt=""/></h3>
+							<span class="simpleCart_total"></span> (<span id="simpleCart_quantity" class="simpleCart_quantity"></span> Livros)</div>
+							
 						</a>
 						<p><a href="javascript:;" class="simpleCart_empty">Empty Cart</a></p>
 
