--- a/core/templates/products.html
+++ b/core/templates/products.html
@@ -4,16 +4,19 @@ Author URL: http://w3layouts.com
 License: Creative Commons Attribution 3.0 Unported
 License URL: http://creativecommons.org/licenses/by/3.0/
 -->
+{% load static %}
+{% load widget_tweaks %}
+
 <!DOCTYPE html>
 <html>
 <head>
 <title>New Store A Ecommerce Category Flat Bootstarp Resposive Website Template | Products :: w3layouts</title>
-<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+<link href="{% static 'css/bootstrap.css' %}" rel="stylesheet" type="text/css" media="all" />
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="js/jquery.min.js"></script>
+<script src="{% static 'js/jquery.min.js' %}"></script>
 <!-- Custom Theme files -->
 <!--theme-style-->
-<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />	
+<link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css" media="all" />	
 <!--//theme-style-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -24,10 +27,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900' rel='stylesheet' type='text/css'><!--//fonts-->
 <!-- start menu -->
-<link href="css/memenu.css" rel="stylesheet" type="text/css" media="all" />
-<script type="text/javascript" src="js/memenu.js"></script>
+<link href="{% static 'css/memenu.css' %}" rel="stylesheet" type="text/css" media="all" />
+<script type="text/javascript" src="{% static 'js/memenu.js' %}"></script>
 <script>$(document).ready(function(){$(".memenu").memenu();});</script>
-<script src="js/simpleCart.min.js"> </script>
+<script src="{% static 'js/simpleCart.min.js' %}"> </script>
 </head>
 <body>
 <!--header-->
@@ -65,7 +68,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="container">
 			<div class="head-top">
 				<div class="logo">
-					<a href="index.html"><img src="images/logo.png" alt=""></a>	
+					<a href="index.html"><img src="{% static 'images/logo.png' %}" alt=""></a>	
 				</div>
 		  <div class=" h_menu4">
 				<ul class="memenu skyblue">
@@ -304,7 +307,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</div>
 					<div class="product-go">
 						<div class=" fashion-grid">
-									<a href="single.html"><img class="img-responsive " src="images/p1.jpg" alt=""></a>
+									<a href="single.html"><img class="img-responsive " src="{% static 'images/p1.jpg' %}" alt=""></a>
 									
 								</div>
 							<div class=" fashion-grid1">
@@ -318,7 +321,7 @@ amet consectetuer  </a></h6>
 							</div>
 							<div class="product-go">
 						<div class=" fashion-grid">
-									<a href="single.html"><img class="img-responsive " src="images/p2.jpg" alt=""></a>
+									<a href="single.html"><img class="img-responsive " src="{% static 'images/p2.jpg' %}" alt=""></a>
 									
 								</div>
 							<div class="fashion-grid1">
@@ -333,7 +336,7 @@ amet consectetuer </a></h6>
 					
 				</div>
 <div class=" per1">
-				<a href="single.html" ><img class="img-responsive" src="images/pro.jpg" alt="">
+				<a href="single.html" ><img class="img-responsive" src="{% static 'images/pro.jpg' %}" alt="">
 				<div class="six1">
 					<h4>DISCOUNT</h4>
 					<p>Up to</p>
@@ -345,7 +348,7 @@ amet consectetuer </a></h6>
 				<div class=" bottom-product">
 					<div class="col-md-4 bottom-cd simpleCart_shelfItem">
 						<div class="product-at ">
-							<a href="single.html"><img class="img-responsive" src="images/pi3.jpg" alt="">
+							<a href="single.html"><img class="img-responsive" src="{% static 'images/pi3.jpg' %}" alt="">
 							<div class="pro-grid">
 										<span class="buy-in">Buy Now</span>
 							</div>
@@ -356,7 +359,7 @@ amet consectetuer </a></h6>
 					</div>
 					<div class="col-md-4 bottom-cd simpleCart_shelfItem">
 						<div class="product-at ">
-							<a href="single.html"><img class="img-responsive" src="images/pi1.jpg" alt="">
+							<a href="single.html"><img class="img-responsive" src="{% static 'images/pi1.jpg' %}" alt="">
 							<div class="pro-grid">
 										<span class="buy-in">Buy Now</span>
 							</div>
@@ -366,7 +369,7 @@ amet consectetuer </a></h6>
 <a href="#" class="item_add"><p class="number item_price"><i> </i>$500.00</p></a>					</div>
 					<div class="col-md-4 bottom-cd simpleCart_shelfItem">
 						<div class="product-at ">
-							<a href="single.html"><img class="img-responsive" src="images/pi4.jpg" alt="">
+							<a href="single.html"><img class="img-responsive" src="{% static 'images/pi4.jpg' %}" alt="">
 							<div class="pro-grid">
 										<span class="buy-in">Buy Now</span>
 							</div>
@@ -379,7 +382,7 @@ amet consectetuer </a></h6>
 					<div class=" bottom-product">
 					<div class="col-md-4 bottom-cd simpleCart_shelfItem">
 						<div class="product-at ">
-							<a href="single.html"><img class="img-responsive" src="images/pi5.jpg" alt="">
+							<a href="single.html"><img class="img-responsive" src="{% static 'images/pi5.jpg' %}" alt="">
 							<div class="pro-grid">
 										<span class="buy-in">Buy Now</span>
 							</div>
@@ -389,7 +392,7 @@ amet consectetuer </a></h6>
 <a href="#" class="item_add"><p class="number item_price"><i> </i>$500.00</p></a>					</div>
 					<div class="col-md-4 bottom-cd simpleCart_shelfItem">
 						<div class="product-at ">
-							<a href="single.html"><img class="img-responsive" src="images/pi.jpg" alt="">
+							<a href="single.html"><img class="img-responsive" src="{% static 'images/pi.jpg' %}" alt="">
 							<div class="pro-grid">
 										<span class="buy-in">Buy Now</span>
 							</div>
@@ -400,7 +403,7 @@ amet consectetuer </a></h6>
 </div>
 					<div class="col-md-4 bottom-cd simpleCart_shelfItem">
 						<div class="product-at ">
-							<a href="single.html"><img class="img-responsive" src="images/pi1.jpg" alt="">
+							<a href="single.html"><img class="img-responsive" src="{% static 'images/pi1.jpg' %}" alt="">
 							<div class="pro-grid">
 										<span class="buy-in">Buy Now</span>
 							</div>
@@ -413,7 +416,7 @@ amet consectetuer </a></h6>
 					<div class=" bottom-product">
 					<div class="col-md-4 bottom-cd simpleCart_shelfItem">
 						<div class="product-at ">
-							<a href="single.html"><img class="img-responsive" src="images/pi3.jpg" alt="">
+							<a href="single.html"><img class="img-responsive" src="{% static 'images/pi3.jpg' %}" alt="">
 							<div class="pro-grid">
 										<span class="buy-in">Buy Now</span>
 							</div>
@@ -425,7 +428,7 @@ amet consectetuer </a></h6>
 					</div>
 					<div class="col-md-4 bottom-cd simpleCart_shelfItem">
 						<div class="product-at ">
-							<a href="single.html"><img class="img-responsive" src="images/pi4.jpg" alt="">
+							<a href="single.html"><img class="img-responsive" src="{% static 'images/pi4.jpg' %}" alt="">
 							<div class="pro-grid">
 										<span class="buy-in">Buy Now</span>
 							</div>
@@ -436,7 +439,7 @@ amet consectetuer </a></h6>
 </div>
 					<div class="col-md-4 bottom-cd simpleCart_shelfItem">
 						<div class="product-at ">
-							<a href="single.html"><img class="img-responsive" src="images/pi5.jpg" alt="">
+							<a href="single.html"><img class="img-responsive" src="{% static 'images/pi5.jpg' %}" alt="">
 							<div class="pro-grid">
 										<span class="buy-in">Buy Now</span>
 							</div>
