--- a/core/templates/login.html
+++ b/core/templates/login.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load widget_tweaks %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -37,8 +38,8 @@
 				</div>
 				<div class="header-left">
 					<ul>
-						<li ><a class="lock"  href="login.html"  >Login</a></li>
-						<li><a class="lock" href="register.html"  >Register</a></li>
+						<li ><a class="lock"  href="{% url 'login/' %}"  >Login</a></li>
+						<li><a class="lock" href="{% url 'cadastro/' %}"  >Register</a></li>
 						<li>
 						</li>
 
@@ -59,11 +60,11 @@
 			<div class="container">
 				<div class="head-top">
 					<div class="logo">
-						<a href="index.html"><img src="{% static 'images/logo.png' %}" alt=""></a>
+						<a href="{% url 'inicial' %}"><img src="{% static 'images/logo.png' %}" alt=""></a>
 					</div>
 					<div class=" h_menu4">
 						<ul class="memenu skyblue">
-							<li class="active grid"><a class="color8" href="index.html">Home</a></li>
+							<li class="active grid"><a class="color8" href="{% url 'inicial' %}">Home</a></li>
 							<li><a class="color1" href="#">Shop</a>
 								<div class="mepanel">
 									<div class="row">
@@ -239,8 +240,7 @@
 					<div class="col-md-4 amet-sed ">
 						<h4>CONTACT US</h4>
 
-						<p>
-							Contrary to popular belief</p>
+						<p>Contrary to popular belief</p>
 							<p>The standard chunk</p>
 							<p>office:  +12 34 995 0792</p>
 							<ul class="social">
