--- a/core/templates/login.html
+++ b/core/templates/login.html
@@ -188,7 +188,7 @@
 
 		</div>
 
-
+{% block conteudo %}
 		<!--content-->
 		<div class="container">
 			<div class="account">
@@ -221,6 +221,7 @@
 			</div>
 
 		</div>
+		{% endblock conteudo %}
 
 		<!--//content-->
 		<div class="footer">
@@ -237,40 +238,41 @@
 							<li><a href="#">Membership</a></li>
 						</ul>
 					</div>
+
 					<div class="col-md-4 amet-sed ">
 						<h4>CONTACT US</h4>
-
 						<p>Contrary to popular belief</p>
-							<p>The standard chunk</p>
-							<p>office:  +12 34 995 0792</p>
-							<ul class="social">
-								<li><a href="#"><i> </i></a></li>
-								<li><a href="#"><i class="twitter"> </i></a></li>
-								<li><a href="#"><i class="rss"> </i></a></li>
-								<li><a href="#"><i class="gmail"> </i></a></li>
-
-							</ul>
-						</div>
-						<div class="col-md-4 amet-sed">
-							<h4>Newsletter</h4>
-							<p>Sign Up to get all news update and promo</p>
-							<form>
-								<input type="text" value="" onfocus="this.value='';" onblur="if (this.value == '') {this.value ='';}">
-								<input type="submit" value="Sign up">
-							</form>
-						</div>
-						<div class="clearfix"> </div>
+						<p>The standard chunk</p>
+						<p>office:  +12 34 995 0792</p>
+						<ul class="social">
+							<li><a href="#"><i> </i></a></li>
+							<li><a href="#"><i class="twitter"> </i></a></li>
+							<li><a href="#"><i class="rss"> </i></a></li>
+							<li><a href="#"><i class="gmail"> </i></a></li>
+						</ul>
 					</div>
-				</div>
-				<div class="footer-class">
-					<p >© 2015 New store All Rights Reserved | Design by  <a href="http://w3layouts.com/" target="_blank">W3layouts</a> </p>
+
+					<div class="col-md-4 amet-sed">
+						<h4>Newsletter</h4>
+						<p>Sign Up to get all news update and promo</p>
+						<form>
+							<input type="text" value="" onfocus="this.value='';" onblur="if (this.value == '') {this.value ='';}">
+							<input type="submit" value="Sign up">
+						</form>
+					</div>
+
+					<div class="clearfix"> </div>
 				</div>
 			</div>
-		</body>
-		</html>
-		<!--A Design by W3layouts
-		Author: W3layout
-		Author URL: http://w3layouts.com
-		License: Creative Commons Attribution 3.0 Unported
-		License URL: http://creativecommons.org/licenses/by/3.0/
-	-->
+			<div class="footer-class">
+				<p >© 2015 New store All Rights Reserved | Design by  <a href="http://w3layouts.com/" target="_blank">W3layouts</a> </p>
+			</div>
+		</div>
+	</body>
+	</html>
+	<!--A Design by W3layouts
+	Author: W3layout
+	Author URL: http://w3layouts.com
+	License: Creative Commons Attribution 3.0 Unported
+	License URL: http://creativecommons.org/licenses/by/3.0/
+-->
