Alterei o extends dos documentos login.html e register.html

--- a/core/templates/register.html
+++ b/core/templates/register.html
@@ -1,8 +1,6 @@
-{% extends "login.html" %}
+{% extends "index.html" %}
 {% load static %}
 {% load widget_tweaks %}
-
-
 
 {% block conteudo %}
 <!--content-->
@@ -28,7 +26,7 @@
 						 <label class="checkbox"><input type="checkbox" name="checkbox" checked=""><i> </i>Sign Up for Newsletter</label>
 					   </a>
 					 </div>
-					 
+
 				     <div class="col-md-6 register-bottom-grid">
 						    <h3>Login information</h3>
 							 <div>
