--- a/core/templates/login.html
+++ b/core/templates/login.html
@@ -1,3 +1,4 @@
+{% extends 'index.html'%}
 {% load static %}
 {% load widget_tweaks %}
 <!DOCTYPE html>
@@ -38,8 +39,8 @@
 				</div>
 				<div class="header-left">
 					<ul>
-						<li ><a class="lock"  href="{% url 'login/' %}"  >Login</a></li>
-						<li><a class="lock" href="{% url 'cadastro/' %}"  >Register</a></li>
+						<li ><a class="lock"  href="{% url 'inicial' %}"  >Login</a></li>
+						<li><a class="lock" href="{% url 'cadastro' %}"  >Register</a></li>
 						<li>
 						</li>
 
