--- a/core/templates/products.html
+++ b/core/templates/products.html
@@ -352,7 +352,7 @@ amet consectetuer </a></h6>
 				<div class=" bottom-product">
 					<div class="col-md-4 bottom-cd simpleCart_shelfItem">
 						<div class="product-at ">
-							<a href="single.html"><img class="img-responsive" src="{% static 'images/pi3.jpg' %}" alt="">
+							<a href="{% url 'livro_detalhes' %}"><img class="img-responsive" src="{% static 'images/pi3.jpg' %}" alt="">
 							<div class="pro-grid">
 										<span class="buy-in">Buy Now</span>
 							</div>
