--- a/core/templates/generos.html
+++ b/core/templates/generos.html
@@ -27,10 +27,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900' rel='stylesheet' type='text/css'><!--//fonts-->
 <!-- start menu -->
-<link href="css/memenu.css" rel="stylesheet" type="text/css" media="all" />
-<script type="text/javascript" src="js/memenu.js"></script>
+<link href="{% static css/memenu.css %}" rel="stylesheet" type="text/css" media="all" />
+<script type="text/javascript" src="{% static js/memenu.js %}"></script>
 <script>$(document).ready(function(){$(".memenu").memenu();});</script>
-<script src="js/simpleCart.min.js"> </script>
+<script src="{% static js/simpleCart.min.js %}"> </script>
 </head>
 <body>
 <!--header-->
