--- a/core/templates/generos_cadastrar.html
+++ b/core/templates/generos_cadastrar.html
@@ -16,7 +16,7 @@
 				</div>
 
 				<div>
-					<button>   </button>
+					<button type="button" class="btn btn-primary btn-lg">Large button</button>
 				</div>
 		
 {% endblock conteudo %}
