--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -13,6 +13,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <head>
 <title>New Store A Ecommerce Category Flat Bootstarp Resposive Website Template | Home :: w3layouts</title>
 <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet" type="text/css" media="all" />
+<link rel="stylesheet" type="text/css" href="{% static 'css/estilo.css' %}"/>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="{% static 'js/jquery.min.js' %}"></script>
 <!-- Custom Theme files -->
