--- a/core/templates/products.html
+++ b/core/templates/products.html
@@ -166,7 +166,7 @@ amet consectetuer </a></h6>
 				<div class=" bottom-product">
 					<div class="col-md-4 bottom-cd simpleCart_shelfItem">
 						<div class="product-at ">
-							<a href="{% url 'livro_detalhes' %}"><img class="img-responsive" src="{% static 'images/pi3.jpg' %}" alt="">
+							<a href="{% url 'livro_detalhes' %}">{{ livros.capa | add_class:"img-responsive" }}
 							<div class="pro-grid">
 										<span class="buy-in">Buy Now</span>
 							</div>
@@ -176,7 +176,7 @@ amet consectetuer </a></h6>
 						<a href="#" class="item_add"><p class="number item_price"><i> </i>$500.00</p></a>						
 					</div>
 					{% empty %}
-					<p class="produtos"> Nenhum livro cadastrado </p>
+					<h2 class="produtos"> Nenhum livro cadastrado </h2>
 				
 				</div>
 			{% endfor %}	
