--- a/core/templates/register.html
+++ b/core/templates/register.html
@@ -6,40 +6,16 @@
 <!--content-->
 <div class=" container">
 	<div class=" register">
-		<h1>Register</h1>
-		<form>
-			<div class="col-md-6 register-top-grid">
-				<h3>Personal infomation</h3>
-				<div>
-					<span>First Name</span>
-					<input type="text">
-				</div>
-				<div>
-					<span>Last Name</span>
-					<input type="text">
-				</div>
-				<div>
-					<span>Email Address</span>
-					<input type="text">
-				</div>
-				<a class="news-letter" href="#">
-					<label class="checkbox"><input type="checkbox" name="checkbox" checked=""><i> </i>Sign Up for Newsletter</label>
-				</a>
-			</div>
-
-			<div class="col-md-6 register-bottom-grid">
-				<h3>Login information</h3>
-				<div>
-					<span>Password</span>
-					<input type="password">
-				</div>
-				<div>
-					<span>Confirm Password</span>
-					<input type="password">
-				</div>
-				<input type="submit" value="submit">
-			</div>
-			<div class="clearfix"> </div>
+		<h1>Cadastre-se</h1>
+		<form method="post">
+			{% csrf_token %}
+			<p>Usuário:</p>
+			<p>{{form.username}}</p>
+			<p>Senha:</p>
+			<p>{{form.password1}}</p>
+			<p>Repita a senha:</p>
+			<p>{{form.password2}}</p>
+			<button type="submit"> Cadastrar </button>
 		</form>
 	</div>
 </div>
