fiz a listagem de genros.html, fiz o botão de cadastrar gênero e fiz a função

--- a/core/templates/generos_cadastrar.html
+++ b/core/templates/generos_cadastrar.html
@@ -1,4 +1,4 @@
-{% extends "generos.html" %}
+{% extends 'index.html' %}
 {% load static %}
 {% load widget_tweaks %}
 
@@ -6,7 +6,7 @@
 <!--content-->
 <div class=" container">
 	<div class=" register">
-		<h1>Register</h1>
+		<h1>Gêneros</h1>
 		<form>
 			<div class="col-md-6 register-top-grid">
 				<h3>cadastrar genero</h3>
