adicionei o import em forms em views

--- a/core/templates/generos.html
+++ b/core/templates/generos.html
@@ -56,7 +56,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 			 {% empty %}
 			 
-			 <h2 class=""> Nenhum livro cadastrado </h2>
+			 <h2 class=""> Nenhum gênero cadastrado </h2>
 
 
 			 {% endfor %}
