--- a/core/templates/registration/login.html
+++ b/core/templates/registration/login.html
@@ -3,17 +3,65 @@
 {% load widget_tweaks %}
 
 {% block conteudo %}
-<!--content-->
+
+<style>
+.centralizado{
+  text-align: center;
+	font-size: 20px;
+	font-family: Ubuntu;
+	font-weight: bold;
+}
+
+.borda {
+	border-radius: 25px;
+	border-color: orange;
+	border-style:solid;
+	border-width:medium;
+	padding-top: 2px;
+	padding-bottom: 2px;
+	text-align: center;
+	color: darkorange;
+}
+
+.borda:focus{
+	padding-left: 30px;
+	padding-right: 30px;
+	transition: 0.5s
+}
+
+.botiones{
+  border: none;
+  border-radius: 15px;
+  background-color: rgba(220, 150, 75, 1);
+  padding: 10px;
+  margin-top: 15px;
+  color: white;
+}
+
+.botiones:hover{
+  background-color: orange;
+  padding-top: 11px;
+  padding-bottom: 11px;
+  padding-left: 12px;
+  padding-right: 12px;
+  font-size: 25px;
+  font-weight: bolder;
+  transition: 0.5s
+}
+
+</style>
+
 <div class="container">
 	<div class="account">
 		<h1>Entrar</h1>
 		<form method="post">
 			{% csrf_token %}
-			<p>Usuário: {{form.username}}</p>
-			<br>
-			<p>Senha: {{form.password}}</p>
-			<br>
-			<button type="submit">Login</button>
+			<p class="centralizado">Usuário:</p>
+			<p class="centralizado">{{form.username | add_class:"borda"}}</p>
+			<p class="centralizado">Senha:</p>
+			<p class="centralizado">{{form.password | add_class:"borda"}}</p>
+
+			<p class="centralizado"><button type="submit" class="botiones">Login</button></p>
 		</form>
 	</div>
 </div>
